--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1632,8 +1632,10 @@ section {
 
 .navbar-sidebar .navbar__list li a {
     display: block;
-    color: #555;
-    font-size: 16px;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    text-decoration: none;
     padding: 15px 0;
 }
 
@@ -1646,8 +1648,8 @@ section {
 }
 
 .navbar-sidebar .navbar__list li.active > a {
-    color: #4272d7;
-    background:white
+    color: white;
+    background:#EE6030
 }
 
 .has-sub {
